# sistema-contabil

./: .default.env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
equibook/: asgi.py  settings.py  urls.py  wsgi.py
equibook/core/: admin.py  apps.py  context_processors.py  managers.py  models.py  urls.py
equibook/core/cache/: account.py  transaction.py
equibook/core/facade/: __init__.py  account.py  accounting_period.py  base.py  operation.py  reports.py  settings.py  transaction.py  trial_balance.py  user.py
equibook/core/forms/: __init__.py  account.py  accounting_period.py  base.py  operation.py  setting.py  transaction.py
equibook/core/migrations/: 0001_initial.py  0002_alter_account_options_alter_operationmeta_options_and_more.py  0003_accountingperiod.py  0004_alter_accountingperiod_end_date.py  0005_accountingperiod_user.py  0006_accountingperiod_status.py  0007_transaction_period_alter_accountingperiod_end_date_and_more.py  0008_transaction_created_at_transaction_updated_at.py  0009_setting_defined_first_period_and_more.py  0010_transaction_archived.py  0011_account_root_type.py  0012_setting_theme.py  0013_remove_setting_theme.py
equibook/core/static/: package-lock.json  package.json  webpack.config.js
equibook/core/templatetags/: to_current_currency.py
equibook/core/tests/: base.py
equibook/core/views/: __init__.py  (+7 more)
equibook/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
example/: README.md
setup/: entrypoint.sh  nginx.conf
shared/: forms.py
(+75 files in other folders)
