[tool.poetry]
name = "novo"
version = "0.1.0"
description = ""
authors = ["Pedro Belo <pn999717@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
redis = "^5.0.1"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
model-bakery = "^1.17.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
